--- a/topology/University of Michigan/AGLT2/AGLT2_downtime.yaml
+++ b/topology/University of Michigan/AGLT2/AGLT2_downtime.yaml
@@ -799,3 +799,36 @@
   Services:
   - CE
 # ---------------------------------------------------------
+- Class: UNSCHEDULED
+  ID: 864426649
+  Description: Still recovering from network problem
+  Severity: Outage
+  StartTime: May 19, 2021 16:45 +0000
+  EndTime: May 20, 2021 04:00 +0000
+  CreatedTime: May 19, 2021 16:44 +0000
+  ResourceName: AGLT2_SE
+  Services:
+  - GridFtp
+# ---------------------------------------------------------
+- Class: UNSCHEDULED
+  ID: 864427890
+  Description: Still recovering from network problem
+  Severity: Outage
+  StartTime: May 19, 2021 16:45 +0000
+  EndTime: May 20, 2021 04:00 +0000
+  CreatedTime: May 19, 2021 16:46 +0000
+  ResourceName: AGLT2_CE_2
+  Services:
+  - CE
+# ---------------------------------------------------------
+- Class: UNSCHEDULED
+  ID: 864428258
+  Description: Still recovering from network problem
+  Severity: Outage
+  StartTime: May 19, 2021 16:45 +0000
+  EndTime: May 20, 2021 04:00 +0000
+  CreatedTime: May 19, 2021 16:47 +0000
+  ResourceName: AGLT2_TEST_CE
+  Services:
+  - CE
+# ---------------------------------------------------------
